css/styles.css
:root {
  --spacing-size: 0.5rem;
  --display-line-height: 2em;
  --display-letter-spacing: -0.08em;
  ---icon-size: ;
  --memory-display-size: 1em;
  --main-display-size: 1.75em;
  --display-font-family: 'Quicksand', sans-serif;
}

*, 
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

/* html {

  max-height: 100dvh;
} */

body {
  display: flex;
  height: 100dvh;
  font-family: var(--display-font-family);
  gap: var(--spacing-size)

}

body > * {
  overflow-y: scroll;
  height: auto;

}

aside {
  width: 25%;
  padding-right: var(--spacing-size);
  direction: rtl;
  position:absolute;
  z-index: 1;
  background-color: red;
  height: 100dvh;
}

aside.desktop {
  /* width: 100dvw; */
  position: relative;
}


.slide-to-left {
  animation: slide-to-left 0.5s ease-in-out both;
}

.slide-to-right {
  animation: slide-to-right 0.5s ease-in-out both;
}

@keyframes slide-to-left {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(-100%);
  }
}

@keyframes slide-to-right {
  from {
    transform: translateX(-100%);
  }
  to {
    transform: translateX(0);
  }
}

main {
  width: 100%;
}
button {
  font-family: var(--display-font-family);
  font-weight: 800;
  padding-bottom: 0.2rem;
  font-size: 1em;
}

button > i {
  padding-bottom: 0;
  padding-top: 0.2rem;
}


div {
  background-color: pink;
}

sup,
sub {
  font-size: 0.75em;
}

aside > table {
  width: 100%;
  direction: ltr;
  
  position: relative;
}

aside > table > thead {
  text-align: left;
}

aside > table > tbody {
  text-align: right;
}

aside > table > thead > tr > th,
aside > table > tbody > tr > td {
  font-size: var(--main-display-size);
}

aside > table.history-table > tbody > tr:nth-child(odd) > td {
  /* color: pink; */
  padding-top: var(--spacing-size);
  font-size: var(--memory-display-size);
}


.grid {
  display: grid;
}

.flex {
  display: flex;
  justify-content: start;
}

.align-left {
  text-align: right;
}

.answer-display-container {
  background-color: violet;
  font-style: italic;

}

.transparent-bg-btn {
  border: 0;
  padding: 0 0.5rem;
  background-color: transparent;
}

.display-screen {
  /* margin: var(--spacing-size); */
  display: flex;
  flex-direction: column;
  line-height: var(--display-line-height);
  letter-spacing: var(--display-letter-spacing);
  height: 20%;
}

.display-screen > .main-display {
  /* font-family: var(--display-font-family); */
  font-size: var(--memory-display-size);
  text-align: right;
  font-size: var(--main-display-size);
  font-style: italic;
  padding: 0 var(--spacing-size);
  width: 100%;

}

.buttons-container {
  grid-template-columns: repeat(5, 1fr);
  grid-template-rows: repeat(5, 1fr);
  gap: var(--spacing-size);
  padding:var(--spacing-size);
  height: 80%;

}

.row > button {
  width: 100%;
}

.buttons-container > .plus-btn {
  grid-column: 4;
  grid-row: 5 / 7;
}

